# Robot_6DOF_ros2

./: .gitignore
install/: local_setup.sh  setup.sh
install/robot_6dof/share/robot_6dof/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_6dof_moveit_config1/share/robot_6dof_moveit_config1/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_6dof_moveit_config2/share/robot_6dof_moveit_config2/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/robot_6dof/: CMakeLists.txt  package.xml
src/robot_6dof/launch/: display.launch  gazebo.launch  gazebo_display.launch.py
src/robot_6dof/rviz/: urdf.rviz
src/robot_6dof/urdf/: robot_6dof.xacro
src/robot_6dof_moveit_config1/: CMakeLists.txt  package.xml
src/robot_6dof_moveit_config1/config/: initial_positions.yaml  robot_6dof.ros2_control.xacro  robot_6dof.urdf.xacro  ros2_controllers.yaml
src/robot_6dof_moveit_config1/launch/: demo_gazebo.launch.py  spawn_controllers.launch.py
src/robot_6dof_moveit_config1/meshes/: Link_2.STL  Link_4.STL
src/robot_6dof_moveit_config2/: CMakeLists.txt
src/robot_6dof_moveit_config2/config/: joint_limits.yaml
src/robot_6dof_moveit_config2/launch/: static_virtual_joint_tfs.launch.py
(+84 files in other folders)
