<?xml version="1.0"?>
<package format="3">
  <name>robot_6dof</name>
  <version>0.0.1</version>
  <description>6 DOF robot URDF for RViz2</description>
  <maintainer email="nhat@todo.todo">Nhat</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend condition="$ROS_DISTRO >= iron">gz_ros2_control</exec_depend>
  <exec_depend condition="$ROS_DISTRO == humble">ign_ros2_control</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>